--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
 			height: 135px;
 			background: #d7641e;
 		}
-		
 	</style>
-	
 </head>
 <body>
 	<div class='main'>
@@ -164,7 +162,7 @@
 			display.innerHTML ='';
 			data.Arguments = [];
 			data.leftHandOperand = '';
-			data.rightOperand = '';
+			data.rightHandOperand = '';
 			data.Operator = '';
 		};
 		var data = {
@@ -174,5 +172,4 @@
 	})();
 	</script>
 </body>
-
 </html>
